DevTools: fix CSS.getComputedStyle protocol method

Currently, the CSS.getComputedStyle upcasts CSSComputedStyleDeclaration
to the CSSStyleDeclaration and, unwillingly, was using the length() and
item() methods to iterate the CSSComputedStyleDeclaration.

However, these are private methods of CSSComputedStyleDeclaration which
are not supposed to be used by the clients.

BUG=606834
R=dgozman

Review-Url: https://codereview.chromium.org/2203473002
Cr-Commit-Position: refs/heads/master@{#409418}

Former-commit-id: 4e200d9789699ba9d52d8650babb12664b2d1b5d